--- a/style.css
+++ b/style.css
@@ -1561,7 +1561,7 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10000;
+  z-index: 99999; /* Tăng z-index để luôn hiển thị trên cùng */
   display: flex;
   justify-content: center;
   align-items: center;
